Remove Scrollbar dependency on AXObjectCache

Move AXObjectCache usage from platform files to FrameView.

Based on https://bugs.webkit.org/show_bug.cgi?id=114514

BUG=

Review URL: https://codereview.chromium.org/65573002

git-svn-id: svn://svn.chromium.org/blink/trunk@161570 bbb929c8-8fbe-4397-9dbb-9b2b20218538

Former-commit-id: ac5f9ce74ca374339d67429c134eac2f524021f6